--- a/notebooks/2_model_training_colab.ipynb
+++ b/notebooks/2_model_training_colab.ipynb
@@ -61,8 +61,8 @@
    "source": [
     "# Gitのユーザー名とメールアドレスを設定\n",
     "# 以下の \"Your Name\" と \"youremail@example.com\" をご自身のものに置き換えてください。\n",
-    "!git config --global user.name \"Your Name\" # ★★★ あなたの名前に置き換えてください ★★★\n",
-    "!git config --global user.email \"youremail@example.com\" # ★★★ あなたのメールアドレスに置き換えてください ★★★\n",
+    "!git config --global user.name \"akamrume328\" # ★★★ あなたの名前に置き換えてください ★★★\n",
+    "!git config --global user.email \"akamaurme@icloud.com\" # ★★★ あなたのメールアドレスに置き換えてください ★★★\n",
     "\n",
     "print(\"Gitのユーザー名とメールアドレスが設定されました。\")\n",
     "!git config --global --list # 設定内容の確認"
@@ -108,7 +108,7 @@
     "# --- ★★★ ユーザー設定項目 ★★★ ---\n",
     "# Google Drive上のZIPファイルのパス\n",
     "# 例: '/content/drive/MyDrive/datasets/my_dataset.zip'\n",
-    "zip_file_path_on_drive = '/content/drive/MyDrive/your_dataset.zip'  # ★★★ あなたのZIPファイルのパスに置き換えてください ★★★\n",
+    "zip_file_path_on_drive = '/content/drive/MyDrive/datasets/TennisBallTracker.v9i.yolov8.zip'  # ★★★ あなたのZIPファイルのパスに置き換えてください ★★★\n",
     "\n",
     "# Colab上にデータセットを展開するディレクトリ\n",
     "# 通常、'/content/' 以下に作成します。\n",
@@ -169,7 +169,7 @@
     "\n",
     "# Google Drive上のデータセットのdata.yamlファイルへのパス\n",
     "# 例: '/content/drive/MyDrive/datasets/tennis_data/data.yaml'\n",
-    "dataset_yaml_path = '/content/drive/MyDrive/your_dataset_folder/data.yaml' # ★★★ ここを修正してください ★★★\n",
+    "dataset_yaml_path = '/content/datasets/data.yaml' # ★★★ ここを修正してください ★★★\n",
     "\n",
     "# トレーニング結果（重み、ログなど）を保存するGoogle Drive上のディレクトリ\n",
     "# 例: '/content/drive/MyDrive/YOLOv8_Tennis_Project'\n",
@@ -197,56 +197,127 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5b9aba",
+   "id": "fa34a1ed",
    "metadata": {},
    "source": [
-    "## YOLOv8モデルの初期化とトレーニング"
+    "学習"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae751cb9",
+   "id": "d6627b94",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "import os\n",
+    "\n",
+    "# --- 重要: これらのパスをGoogle Driveの構造に合わせて設定してください ---\n",
+    "\n",
+    "# Google Drive上のデータセットのdata.yamlファイルへのパス\n",
+    "# 例: '/content/drive/MyDrive/datasets/tennis_data/data.yaml'\n",
+    "dataset_yaml_path = '/content/datasets/data.yaml' # ★★★ ここを修正してください ★★★\n",
+    "\n",
+    "# トレーニング結果（重み、ログなど）を保存するGoogle Drive上のディレクトリ\n",
+    "# 例: '/content/drive/MyDrive/YOLOv8_Tennis_Project'\n",
+    "project_output_dir = '/content/drive/MyDrive/YOLOv8_Training_Outputs' # ★★★ ここを修正してください ★★★\n",
+    "\n",
+    "# この特定のトレーニング実行の名前（project_output_dirのサブディレクトリとして作成されます）\n",
+    "# 追学習の場合、通常は同じ名前を指定して結果を同じフォルダに追記します。\n",
+    "experiment_name = 'tennis_detection_run1'\n",
+    "\n",
+    "# --- 追学習の設定 (オプション) ---\n",
+    "# 追学習を行う場合は True に設定します。\n",
+    "resume_training = False  # ★★★ 追学習する場合は True に変更 ★★★\n",
+    "\n",
+    "# 追学習時に再開するチェックポイントのパス ( .pt ファイル)\n",
+    "# resume_training が True の場合に参照されます。\n",
+    "# None の場合、YOLOv8は project_output_dir/experiment_name 内の最新の学習状態から再開を試みます。\n",
+    "# 例: '/content/drive/MyDrive/YOLOv8_Training_Outputs/tennis_detection_run1/weights/last.pt'\n",
+    "checkpoint_to_resume_from = None  # ★★★ 特定のチェックポイントから再開する場合はパスを指定 ★★★\n",
+    "# --- 設定項目終了 ---\n",
+    "\n",
+    "# プロジェクト出力ディレクトリが存在しない場合は作成\n",
+    "os.makedirs(project_output_dir, exist_ok=True)\n",
+    "\n",
+    "print(f\"データセットのYAMLパス: {dataset_yaml_path}\")\n",
+    "print(f\"プロジェクト出力ディレクトリ: {project_output_dir}\")\n",
+    "print(f\"実験名: {experiment_name}\")\n",
+    "if resume_training:\n",
+    "    if checkpoint_to_resume_from:\n",
+    "        print(f\"追学習モード: ON (チェックポイント: {checkpoint_to_resume_from})\")\n",
+    "    else:\n",
+    "        print(f\"追学習モード: ON (プロジェクト '{experiment_name}' の最新状態から再開)\")\n",
+    "else:\n",
+    "    print(\"追学習モード: OFF (新規学習)\")\n",
+    "\n",
+    "\n",
+    "# データセットのYAMLファイルが存在するか確認\n",
+    "if not os.path.exists(dataset_yaml_path):\n",
+    "    print(f\"エラー: データセットのYAMLファイルが見つかりません: {dataset_yaml_path}\")\n",
+    "    print(\"パスを再確認してください。\")\n",
+    "else:\n",
+    "    print(\"データセットのYAMLファイルが見つかりました。\")\n",
+    "\n",
     "from ultralytics import YOLO\n",
     "\n",
     "# 事前学習済みのYOLOv8モデルをロード\n",
     "# 'yolov8n.pt', 'yolov8s.pt', 'yolov8m.pt', 'yolov8l.pt', 'yolov8x.pt' などのサイズを選択可能\n",
     "# 初めての場合は 'yolov8n.pt' (Nano) または 'yolov8s.pt' (Small) を推奨\n",
+    "# 追学習で特定のローカルチェックポイントから開始する場合は、その .pt ファイルのパスをここに指定することもできます。\n",
+    "# 例: model_name = '/content/drive/MyDrive/YOLOv8_Training_Outputs/tennis_detection_run1/weights/last.pt'\n",
+    "# ただし、通常は resume パラメータで制御する方が推奨されます。\n",
     "model_name = 'yolov8s.pt'\n",
     "model = YOLO(model_name)\n",
     "\n",
     "# トレーニングのハイパーパラメータを定義\n",
+    "# 追学習の場合、num_epochs は「合計の目標エポック数」を指定します。\n",
+    "# 例えば、前回50エポックまで学習し、合計100エポックを目指す場合は num_epochs = 100 とします。\n",
     "num_epochs = 100  # トレーニングエポック数 (例: 50, 100, 200)\n",
     "batch_size = 16   # バッチサイズ (GPUメモリに応じて調整: 例 8, 16, 32)\n",
     "img_size = 640    # 入力画像サイズ (例: 640, 1280)\n",
     "\n",
     "print(f\"モデルのトレーニングを開始します: {model_name}\")\n",
-    "print(f\"エポック数: {num_epochs}, バッチサイズ: {batch_size}, 画像サイズ: {img_size}\")\n",
+    "print(f\"目標エポック数: {num_epochs}, バッチサイズ: {batch_size}, 画像サイズ: {img_size}\")\n",
     "\n",
     "# トレーニングを開始\n",
     "try:\n",
-    "    results = model.train(\n",
-    "        data=dataset_yaml_path,\n",
-    "        epochs=num_epochs,\n",
-    "        imgsz=img_size,\n",
-    "        batch=batch_size,\n",
-    "        project=project_output_dir, # すべての実行結果を保存するメインディレクトリ\n",
-    "        name=experiment_name,       # この特定の実行のサブディレクトリ\n",
-    "        exist_ok=True,              # experiment_nameディレクトリが既に存在する場合は上書きを許可\n",
-    "        # device=0,                 # GPUを使用 (最初のGPUは0, CPUを使用する場合は 'cpu')\n",
-    "                                    # Colabでは通常、自動的にGPUが割り当てられます。\n",
-    "        # workers=8,                # データローダーのワーカー数 (ColabのCPUに応じて調整)\n",
-    "        # patience=30,              # 早期終了の忍耐値 (例: 30エポック後に改善がない場合に停止)\n",
-    "        # lr0=0.01,                 # 初期学習率\n",
-    "        # optimizer='AdamW',        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
-    "    )\n",
+    "    train_params = {\n",
+    "        'data': dataset_yaml_path,\n",
+    "        'epochs': num_epochs,\n",
+    "        'imgsz': img_size,\n",
+    "        'batch': batch_size,\n",
+    "        'project': project_output_dir,\n",
+    "        'name': experiment_name,\n",
+    "        'exist_ok': True,  # experiment_nameディレクトリが既に存在する場合は上書き/追記を許可\n",
+    "        # 'device': 0,\n",
+    "        # 'workers': 8,\n",
+    "        # 'patience': 30,\n",
+    "        # 'lr0': 0.01,\n",
+    "        # 'optimizer': 'AdamW',\n",
+    "    }\n",
+    "\n",
+    "    if resume_training:\n",
+    "        if checkpoint_to_resume_from and os.path.exists(checkpoint_to_resume_from):\n",
+    "            train_params['resume'] = checkpoint_to_resume_from\n",
+    "            print(f\"指定されたチェックポイントから追学習を開始します: {checkpoint_to_resume_from}\")\n",
+    "        else:\n",
+    "            # checkpoint_to_resume_from が指定されていないか、存在しない場合は、\n",
+    "            # project/name ディレクトリ内の最新の学習状態からの再開を試みます。\n",
+    "            train_params['resume'] = True # YOLOv8が自動で最新を探します\n",
+    "            print(f\"プロジェクト '{os.path.join(project_output_dir, experiment_name)}' の最新の学習状態から追学習を試みます。\")\n",
+    "    else:\n",
+    "        print(\"新規にトレーニングを開始します。\")\n",
+    "        if os.path.exists(os.path.join(project_output_dir, experiment_name)):\n",
+    "            print(f\"警告: '{os.path.join(project_output_dir, experiment_name)}' は既に存在します。exist_ok=True のため上書き/追記されます。\")\n",
+    "\n",
+    "\n",
+    "    results = model.train(**train_params)\n",
     "    print(\"\\nトレーニングが正常に完了しました！\")\n",
     "    print(f\"結果、ログ、モデルの重みは次の場所に保存されました: {os.path.join(project_output_dir, experiment_name)}\")\n",
     "except Exception as e:\n",
-    "    print(f\"\\nトレーニング中にエラーが発生しました: {e}\")"
+    "    print(f\"\\nトレーニング中にエラーが発生しました: {e}\")\n"
    ]
   },
   {
