--- a/notebooks/2_model_training_colab.ipynb
+++ b/notebooks/2_model_training_colab.ipynb
@@ -337,7 +337,7 @@
         "# Google Drive上のZIPファイルのパス\n",
         "# 例: '/content/drive/MyDrive/datasets/my_dataset.zip'\n",
         "# このZIPファイルには、画像、ラベル、data.yaml、train.txt、val.txtなどが含まれていることを想定しています。\n",
-        "zip_file_path_on_drive = '/content/drive/MyDrive/datasets/tennis ball detection.v6i.yolov8.zip'  # ★★★ あなたのZIPファイルのパスに置き換えてください ★★★\n",
+        "zip_file_path_on_drive = '/content/drive/MyDrive/datasets/dataset.zip'  # ★★★ あなたのZIPファイルのパスに置き換えてください ★★★\n",
         "\n",
         "# Colab上にデータセットを展開するディレクトリ\n",
         "# 通常、'/content/' 以下に作成します。\n",
@@ -387,7 +387,7 @@
         "\n",
         "        print(f\"\\n重要: 次の「パスの設定」セルで、`dataset_yaml_path` が、\")\n",
         "        print(f\"このColab上の展開先ディレクトリ ({colab_dataset_dir}) 内の `data.yaml` を指すように更新してください。\")\n",
-        "        print(f\"例えば、もしZIP展開後に '{os.path.join(colab_dataset_dir, \"your_dataset_main_folder\", \"data.yaml\")}' のような構造になる場合、\")\n",
+        "        print(f'例えば、もしZIP展開後に \"{os.path.join(colab_dataset_dir, \"your_dataset_main_folder\", \"data.yaml\")}\" のような構造になる場合、')\n",
         "        print(f'dataset_yaml_path = \"{os.path.join(colab_dataset_dir, \"your_dataset_main_folder\", \"data.yaml\")}\" のように設定します。')\n",
         "        print(\"ZIPファイル内のフォルダ構造を確認し、適切にパスを修正してください。\")\n",
         "\n",
@@ -436,7 +436,7 @@
         "# ★★★ `train: path/to/train.txt` や `val: path/to/val.txt` のように、\n",
         "# ★★★ 訓練用/検証用テキストファイルへのパス（通常はdata.yamlからの相対パス）を定義している必要があります。\n",
         "# ★★★ `train.txt` や `val.txt` は、画像ファイルへのパスのリスト（例: `images/train/frame_000001.png` や `../images/frame_000001.png`）を含みます。\n",
-        "dataset_yaml_path = '/content/datasets/data.yaml' # ★★★ ここをあなたのdata.yamlへの実際のパスに修正してください ★★★\n",
+        "dataset_yaml_path = '/content/datasets/dataset/data.yaml' # ★★★ ここをあなたのdata.yamlへの実際のパスに修正してください ★★★\n",
         "\n",
         "# トレーニング結果（重み、ログなど）を保存するGoogle Drive上のディレクトリ\n",
         "# 例: '/content/drive/MyDrive/YOLOv8_Tennis_Project_Outputs'\n",
